recursion.cons.length.Length.scala.error
Erreur de compilation :
Length:4: error: 'case' expected but identifier found.
    Case Nil => 0
    ^Length:5: error: '}' expected but ';' found.
    Case _ => 1 + length(l.tail)
^Length:5: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
    Case _ => 1 + length(l.tail)
         ^Length:9: error: eof expected but '}' found.
}
^