recursion.cons.length.Length.scala.code
def length(l:List[Int]): Int = {
  l match {
    Case Nil => 0
    Case _ => 1 + length(l.tail)
  }
}